# tree-sitter-edge

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  binding.gyp  go.mod  grammar.js  index.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json
bindings/go/: binding_test.go
bindings/node/: binding.cc  index.js
bindings/rust/: Cargo.toml  lib.rs
corpus/: basics.txt  directives.txt
examples/: home.edge  simple.edge  test.edge
src/: grammar.json  node-types.json  parser.c  scanner.c
