[package]
name = "tree-sitter-edge"
description = "Edge grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "edge"]
categories = ["parsing", "text-editors"]
edition = "2021"

build = "build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/*",
  "queries/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
